Updated deprecated config files.

--- a/wsservice/Makefile
+++ b/wsservice/Makefile
@@ -114,7 +114,7 @@ extout =
 extout_prefix = 
 target_prefix = 
 LOCAL_LIBS = 
-LIBS = $(LIBRUBYARG_SHARED) -lmod_rampart -lneethi_util -lneethi -laxis2_engine -laxis2_http_receiver -laxis2_http_sender -laxis2_http_common -laxis2_engine -laxis2_parser -laxutil -laxis2_axiom  -lpthread -ldl -lobjc 
+LIBS = $(LIBRUBYARG_SHARED) -lmod_rampart -lneethi_util -lneethi -laxis2_engine -laxis2_http_receiver -laxis2_http_sender -laxis2_http_common -laxis2_engine -laxis2_parser -laxutil -lwsdlc -laxis2_axiom  -lpthread -ldl -lobjc 
 SRCS = wsf.c wsf_out_transport_info.c wsf_policy.c wsf_stream.c wsf_util.c wsf_worker.c wsf_xml_msg_recv.c
 OBJS = wsf.o wsf_out_transport_info.o wsf_policy.o wsf_stream.o wsf_util.o wsf_worker.o wsf_xml_msg_recv.o
 TARGET = wsservice
